home page changes and add some sections

--- a/eduspire_new/teach_eduspire.html
+++ b/eduspire_new/teach_eduspire.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.png" type="image/png" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
  
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
     <link href="css/jquery-ui.min.css" rel="stylesheet" />
@@ -133,6 +134,150 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Javascript:;"><span class="fr">Free</span> Live Classes</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="Javascript:;" data-toggle="dropdown"><span class="fr">Free</span> Study Material</a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="javascript:;">NCERT Solutions <i class="fa fa-angle-right"></i></a>
+                                <ul class="sub_menu">
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 12</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 11</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 10</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 9</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 8</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 7</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 6</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="javascript:;">Previous Year Papers <i class="fa fa-angle-right"></i></a>
+                                <ul class="sub_menu">
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">CBSE Class 10</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">CBSE Class 12</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">JEE Main Papers</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">JEE Advances Papers</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">NEET Papers</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">KCET Papers</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="javascript:;">Mock Tests <i class="fa fa-angle-right"></i></a>
+                                <ul class="sub_menu">
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">JEE Main Mock Tests</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">JEE Advanced Mock Tests</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="javascript:;">Sample Papers <i class="fa fa-angle-right"></i></a>
+                                <ul class="sub_menu">
+                                    <li>
+                                        <h3 class="dropdown-item" href="javascript:;">CBSE</h3>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 12</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 10</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 9</a>
+                                    </li>
+                                    <li>
+                                        <h3 class="dropdown-item" href="javascript:;">ICSE</h3>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 10</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="javascript:;">ICSE Solutions <i class="fa fa-angle-right"></i></a>
+                                <ul class="sub_menu">
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 10</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="javascript:;">School Syllabus <i class="fa fa-angle-right"></i></a>
+                                <ul class="sub_menu">
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">CBSE Board</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">ICSE Board</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="javascript:;">Revision Notes <i class="fa fa-angle-right"></i></a>
+                                <ul class="sub_menu">
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 12</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 11</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 10</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 9</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="javascript:;">Important Questions <i class="fa fa-angle-right"></i></a>
+                                <ul class="sub_menu">
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 12</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 11</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 10</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="javascript:;">Class 9</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
                 <div class="searchbox">
                     <form action="javascript:;">
@@ -148,7 +293,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="Javascript:;" data-toggle="dropdown">Eduspire for Business</a>
                         <ul class="dropdown-menu txt">
-                            <h2>Get your team access to over 4,000 top Eduspire courses, anytime, anywhere.</h2>
+                            <h2>Get your team access to over 4,000 top Udemy courses, anytime, anywhere.</h2>
                             <a href="javascript:;" class="btndefault">Try Eduspire for Business</a>
                         </ul>
                     </li> 
@@ -176,7 +321,7 @@
             </div> 
         </nav>
     </div>
-  </header>  
+  </header>
 
   <section id="teach_banner" class="pt d-flex flex-column justify-content-center align-items-center">
     <div class="container text-center text-md-left" data-aos="fade-up">
