correct spelling in choose your goal page

--- a/eduspire_new_design/choose_your_goal.html
+++ b/eduspire_new_design/choose_your_goal.html
@@ -179,7 +179,7 @@
                                 <a href="#ssc_bank" class="scroll">SSC and Bank Exams</a>
                             </li>
                             <li>
-                                <a href="#jee_neet" class="scroll">JEE adn NEET Preparation</a>
+                                <a href="#jee_neet" class="scroll">JEE and NEET Preparation</a>
                             </li>
                             <li>
                                 <a href="#cbse" class="scroll">CBSE</a>
