--- a/eduspire_new_design/index.html
+++ b/eduspire_new_design/index.html
@@ -73,10 +73,10 @@
                     </div>
                     <ul class="navbar-nav l">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="Javascript:;" data-toggle="dropdown">Become an instructor</a>
+                            <a class="nav-link dropdown-toggle" href="javascript:" data-toggle="dropdown">Become an instructor</a>
                             <ul class="dropdown-menu txt">
                                 <h2>Get your team access to over 4,000 top Udemy courses, anytime, anywhere.</h2>
-                                <a href="javascript:;" class="btndefault">Try Eduspire for Business</a>
+                                <a href="instructor.html" class="btndefault">Try Eduspire for Business</a>
                             </ul>
                         </li> 
                         <li class="nav-item">
